[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/gui/exit_focus.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/start_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/start_focus.png" type="Texture" id=4]
[ext_resource path="res://assets/environment/spaceinvadoors/invadoor_actors.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/InvadoorsGame.gd" type="Script" id=6]
[ext_resource path="res://assets/gui/exit_normal.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/pixel.ttf"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/pixel.ttf"

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 175, 10 )

[node name="InvadoorsGame" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="."]
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="HUD"]
visible = false
margin_top = 141.0
margin_right = 258.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 3 )
text = "Game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
margin_right = 350.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/MarginContainer"]
margin_right = 350.0
margin_bottom = 300.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -164.5
margin_top = 60.0
margin_right = 164.5
margin_bottom = 43.0
custom_fonts/font = SubResource( 5 )
text = "SPACE INVADOORS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -34.0
margin_right = 80.0
margin_bottom = 34.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Menu/MarginContainer/ColorRect/VBoxContainer" groups=[
"Buttons",
]]
margin_right = 160.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="ExitButton" type="TextureButton" parent="Menu/MarginContainer/ColorRect/VBoxContainer" groups=[
"Buttons",
]]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.00003
margin_right = 351.0
margin_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 1, 1, 1, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doors" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 175, 26 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="LowerBound" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerBound"]
position = Vector2( 175, 300 )
shape = SubResource( 6 )
[connection signal="body_entered" from="LowerBound" to="." method="_on_LowerBound_body_entered"]
